appId: dev.expo.shiftcare
---
- tapOn: ", Christy Schumm, Australia/Sydney"

- tapOn:
    id: "undefined.calendarList.staticHeader.rightArrow"

- repeat:
    times: 3
    commands:
      - swipe:
          start: 50%,40%
          end: 50%,95%
          duration: 50
- swipe:
    start: 50%,80%
    end: 50%,20%
    duration: 500

- longPressOn:
    point: 10%,55%

- assertVisible: "Booking Confirmation"
- assertVisible: "Doctor: Christy Schumm"

- tapOn:
    id: "booking_confirm_add"